--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="f1, alphatauri, pilotagem, pilot, honda, gasly">
 
     <meta property="og:type" content="page">
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://leonrdobozzi.github.io/GaslyFanPage/">
     <meta property="og:title" content="Pierry Gasly">
     <meta property="og:image" content="">
     <meta property="og:description" content="A Fan page dedicated to F1 pilot Pierre Gasly">
@@ -18,7 +18,7 @@
     <meta property="article:author" content="Leonardo Bozzi">
 
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@">
+    <meta name="twitter:site" content="https://leonrdobozzi.github.io/GaslyFanPage/">
     <meta name="twitter:title" content="Pierry Gasly">
     <meta name="twitter:creator" content="@devbozzi">
     <meta name="twitter:description" content="A Fan page dedicated to F1 pilot Pierre Gasly">
